--- a/params.yaml
+++ b/params.yaml
@@ -1,12 +1,12 @@
 train:
-  learning_rate: 
-  hidden_layer_1_neurons: 
-  hidden_layer_2_neurons: 
-  dropout_rate: 
-  epochs: 
-  batch_size: 
-  random_seed: 
+  learning_rate: 0
+  hidden_layer_1_neurons: 0
+  hidden_layer_2_neurons: 0
+  dropout_rate: 0
+  epochs: 0
+  batch_size: 0
+  random_seed: 0
 
 preprocess_data:
-  test_size: 
-  random_seed: 
+  test_size: 0.2
+  random_seed: 42
